// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiling to CSS and JavaScript should return a map of files 1`] = `
Object {
  "Button.elo.css": "._1lkzl71 {
  background-color: red;
  padding-left: 10px;
  border: 0px
}

._1lkzl71__Type-Primary {
  background-color: red
}

._1lkzl71__Type-Primary:hover {
  padding-left: 10px
}

._1lkzl71__Type-Primary__Mode-Dark {
  background-color: blue
}

._1lkzl71__Mode-Light {
  background-color: green
}",
  "Button.elo.js": "import './Button.elo.css'
import { getClassNameFromVariantMap, getDynamicStyleFromVariantMap } from '@elodin/runtime'

const variantClassNameMap = {
  \\"\\": {},
  \\"__Type-Primary\\": {
    \\"Type\\": \\"Primary\\"
  },
  \\"__Type-Primary__Mode-Dark\\": {
    \\"Type\\": \\"Primary\\",
    \\"Mode\\": \\"Dark\\"
  },
  \\"__Mode-Light\\": {
    \\"Mode\\": \\"Light\\"
  }
}

const variantStyleMap = {
'__Type-Primary': props => ({
  \\"paddingLeft\\":props.paddingLeft,
  \\":hover\\":{\\"paddingRight\\":props.paddingRight}
}),
'__Type-Primary__Mode-Dark': props => ({
  \\"paddingLeft\\":props.padLeft
})
}

export function Button(props = {}) {
  return {
    _className: '_elo_view ' + getClassNameFromVariantMap('_1lkzl71', variantClassNameMap, props),
    \\"borderWidth\\":props.borderWidth,
    ...getDynamicStyleFromVariantMap(variantStyleMap, props)
  }
}",
  "Label.elo.css": "._1edorjp:hover {
  color: red
}",
  "Label.elo.js": "import './Label.elo.css'

export function Label(props = {}) {
  return {
    _className: '_elo_text _1edorjp',
    \\"lineHeight\\":props.lineHeight,
    \\":hover\\":{\\"fontSize\\":props.fontSize}
  }
}",
  "index.elo.js": "import { Button } from './Button.elo.js'
import { Label } from './Label.elo.js'

export {
  Button,
  Label
}",
}
`;

exports[`Compiling to CSS and JavaScript should use the given adapter 1`] = `
Object {
  "Button.elo.css": "._1lkzl71 {
  background-color: red;
  padding-left: 10px;
  border: 0px
}

._1lkzl71__Type-Primary {
  background-color: red
}

._1lkzl71__Type-Primary:hover {
  padding-left: 10px
}

._1lkzl71__Type-Primary__Mode-Dark {
  background-color: blue
}

._1lkzl71__Mode-Light {
  background-color: green
}",
  "Button.elo.js": "import './Button.elo.css'
import { getClassNameFromVariantMap, getDynamicStyleFromVariantMap } from '@elodin/runtime'
import { createComponent } from 'react-fela'

const variantMap = {
  \\"\\": {},
  \\"__Type-Primary\\": {
    \\"Type\\": \\"Primary\\"
  },
  \\"__Type-Primary__Mode-Dark\\": {
    \\"Type\\": \\"Primary\\",
    \\"Mode\\": \\"Dark\\"
  },
  \\"__Mode-Light\\": {
    \\"Mode\\": \\"Light\\"
  }
}

const variantStyleMap = {
'__Type-Primary': props => ({
  \\"paddingLeft\\":props.paddingLeft,
  \\":hover\\":{\\"paddingRight\\":props.paddingRight}
}),
'__Type-Primary__Mode-Dark': props => ({
  \\"paddingLeft\\":props.padLeft
})
}

function ButtonStyle(props  = {}) {
  return {
    _className: '_elo_view ' + getClassNameFromVariantMap('_1lkzl71', variantMap, props),
    \\"borderWidth\\":props.borderWidth,
    ...getDynamicStyleFromVariantMap(variantStyleMap, props)
  }
}

export const Button = createComponent(ButtonStyle)",
  "Label.elo.css": "._1edorjp:hover {
  color: red
}",
  "Label.elo.js": "import './Label.elo.css'
import { createComponent } from 'react-fela'

function LabelStyle(props  = {}) {
  return {
    _className: '_elo_text _1edorjp',
    \\"lineHeight\\":props.lineHeight,
    \\":hover\\":{\\"fontSize\\":props.fontSize}
  }
}

export const Label = createComponent(LabelStyle)",
  "index.elo.js": "import { Button } from './Button.elo.js'
import { Label } from './Label.elo.js'

export {
  Button,
  Label
}",
}
`;
